# INFS4203

./: .env  .gitignore  README.md  pyproject.toml  s4827064.csv
data/: kmeans_best.joblib  knn_best.joblib  rf_best.joblib  rf_best_estimator.joblib  s4827064.csv  s4827064_strat.csv  val_strat.csv
infs4203/: classification.py  data_inspection.ipynb  dataset.py  dtree.ipynb  experimental.ipynb  hyperparameter_tuning.py  inspect.ipynb  knn.py  models.py  plotting.ipynb  scikit_demo.py  test.ipynb  utils.py
infs4203_proj/: cnn.py  data_inspection.ipynb  utils.py
infs4203_proj/classification/: dataset.py  div_kok.py
validator/: README.md  s1234567.csv  s4827064.csv  s7654321.csv
