[tool.poetry]
name = "infs4203"
version = "0.1.0"
description = ""
authors = ["Lars Moan <lars.ostberg.moan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
pre-commit = "^3.4.0"
jupyter-contrib-nbextensions = "^0.7.0"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
